--- a/contacto.html
+++ b/contacto.html
@@ -1,11 +1,63 @@
+<!-- Nuestros clientes suelen tener preguntas.
+Necesitamos un formulario simple para que nos dejen sus dudas. Debe validar que la información sea correcta."
+Un formulario con campos para "Nombre", "Email" y "Mensaje".
+Debe tener validación del lado del cliente con JavaScript.
+Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación del DOM -->
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta charset=" UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contacto</title>
+<link rel="stylesheet" href="estilos.css">
 </head>
+
+
+<header>
+    <h1>MUEBLERIA HERMANOS JOTA</h1> <!-- TEMPORAL -->
+    <nav>
+        <ul>
+            <li><a href="#">Inicio</a></li> <!-- TEMPORAL -->
+            <li><a href="#">Acerca de</a></li> <!-- TEMPORAL -->
+            <li><a href="#">Contacto</a></li> <!-- TEMPORAL -->
+        </ul>
+    </nav>
+</header>
+
 <body>
-    
+    <section>
+        <h1 id="titulo-contacto">
+            Enviar una consulta
+        </h1>
+        <h4 class="subtitulo-contacto">
+            ¡Estamos aquí para ayudarte! Queremos escucharte y resolver tus dudas.
+        </h4>
+        <h4 class="subtitulo-contacto">
+            Dejanos tus preguntas o cualquier inconveniente que tengas aquí abajo y nos contactaremos contigo.
+        </h4>
+    </section>
+    <main>
+        <form action="/enviar-contacto" method="POST">
+            <div>
+                <label for="nombreUsuario">NOMBRE</label>
+                <input type="text" id="nombreUsuario" name="nombre" required>
+            </div>
+            <div>
+                <label for="emailUsuario">CORREO ELECTRÓNICO</label>
+                <input type="email" id="emailUsuario" name="email" required>
+            </div>
+            <div>
+                <label for="mensajeUsuario">MENSAJE</label>
+                <textarea id="mensajeUsuario" name="mensaje" rows="5" required></textarea>
+            </div>
+            <button type="submit">ENVIAR</button>
+        </form>
+    </main>
 </body>
+
+<footer>
+    Pie de Pagina &copy; 2025
+</footer>
+
 </html>
