--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!--Practicando Git-->
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Muebleria Hemanos Jota</title>
+  </head>
+  <body>
+    <header>
+      <nav></nav>
+    </header>
+    <section></section>
+    <section></section>
+    <footer><p> &copy; 2025 Mueblería Hermanos Jota - Todos los derechos reservados</p></footer>
+  </body>
 </html>
