agrego CSS con reset a Index

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!--Practicando Git-->
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/estiloInicio.css" />
     <title>Muebleria Hemanos Jota</title>
   </head>
   <body>
@@ -13,6 +12,8 @@
     </header>
     <section></section>
     <section></section>
-    <footer><p> &copy; 2025 Mueblería Hermanos Jota - Todos los derechos reservados</p></footer>
+    <footer>
+      <p>&copy; 2025 Mueblería Hermanos Jota - Todos los derechos reservados</p>
+    </footer>
   </body>
 </html>
