--- a/index.html
+++ b/index.html
@@ -3,17 +3,109 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/estiloInicio.css" />
-    <title>Muebleria Hemanos Jota</title>
+    <title>Mueblería Hermanos Jota</title>
+
+    <!-- 🎨 Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- 📄 Estilos principales -->
+    <link rel="stylesheet" href="estiloInicio.css" />
   </head>
+
   <body>
-    <header>
-      <nav></nav>
+    <!-- Header -->
+    <header class="header">
+      <div class="header__logo">
+        <img src="assets/logo.svg" alt="Logo Hermanos Jota" />
+      </div>
+      <nav class="header__nav">
+        <ul class="nav__list">
+          <li><a href="index.html" class="nav__link">Inicio</a></li>
+          <li><a href="productos.html" class="nav__link">Catálogo</a></li>
+          <li><a href="contacto.html" class="nav__link">Contacto</a></li>
+        </ul>
+      </nav>
+      <div class="header__cart">
+        <button class="cart__btn">🛒 <span id="cart-count">0</span></button>
+      </div>
+      <button class="header__toggle" aria-label="Abrir menú">☰</button>
     </header>
-    <section></section>
-    <section></section>
-    <footer>
-      <p>&copy; 2025 Mueblería Hermanos Jota - Todos los derechos reservados</p>
+
+    <!-- Hero Banner -->
+    <section class="hero">
+      <div class="hero__content">
+        <h1 class="hero__title">
+          Muebles de diseño para redescubrir el arte de vivir
+        </h1>
+        <p class="hero__subtitle">
+          Calidad artesanal con un estilo contemporáneo
+        </p>
+        <a href="productos.html" class="btn btn--primary">Ver catálogo</a>
+      </div>
+    </section>
+
+    <!-- Productos Destacados -->
+    <main>
+      <section class="featured">
+        <h2 class="featured__title">Productos Destacados</h2>
+        <div class="featured__grid">
+          <!-- Producto 1 -->
+          <article class="product-card">
+            <img
+              src="assets/Aparador Uspallata.png"
+              alt="Aparador Uspallata"
+              class="product-card__img"
+            />
+            <h3 class="product-card__title">Aparador Uspallata</h3>
+            <p class="product-card__price">$120.000</p>
+            <button class="btn btn--add">Añadir al carrito</button>
+          </article>
+
+          <!-- Producto 2 -->
+          <article class="product-card">
+            <img
+              src="assets/Mesa de Centro Araucaria.png"
+              alt="Mesa de Centro Araucaria"
+              class="product-card__img"
+            />
+            <h3 class="product-card__title">Mesa de Centro Araucaria</h3>
+            <p class="product-card__price">$95.000</p>
+            <button class="btn btn--add">Añadir al carrito</button>
+          </article>
+
+          <!-- Producto 3 -->
+          <article class="product-card">
+            <img
+              src="assets/Silla de Trabajo Belgrano.png"
+              alt="Silla de Trabajo Belgrano"
+              class="product-card__img"
+            />
+            <h3 class="product-card__title">Silla de Trabajo Belgrano</h3>
+            <p class="product-card__price">$75.000</p>
+            <button class="btn btn--add">Añadir al carrito</button>
+          </article>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__info">
+        <p>&copy; 2025 Hermanos Jota - Todos los derechos reservados</p>
+        <p>
+          Contacto:
+          <a href="mailto:brand@hermanosjota.com">brand@hermanosjota.com</a>
+        </p>
+      </div>
+      <div class="footer__social">
+        <a href="#">Instagram</a> | <a href="#">Facebook</a>
+      </div>
     </footer>
+
+    <script src="productos.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
