--- a/contacto.html
+++ b/contacto.html
@@ -6,11 +6,12 @@ Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación 
 
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contacto</title>
-<link rel="stylesheet" href="estiloContacto.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="estiloContacto.css">
 </head>
 
 
@@ -52,9 +53,15 @@ Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación 
                 <textarea id="mensajeUsuario" name="mensaje" rows="5"></textarea>
             </div>
             <button type="submit">ENVIAR</button>
-            <script src="validacionContacto.js"></script>
         </form>
+            <div id="mensajeExito" class="oculto">
+                <div class="contenido-mensaje">
+                    <span id="cerrarMensaje">&times;</span>
+                    <p>¡Gracias! Su consulta fue enviada con éxito.<br>Nos pondremos en contacto a la brevedad.</p>
+                </div>
+            </div>
     </main>
+    <script src="validacionContacto.js"></script>
 </body>
 
 <footer>
