--- a/detalle.html
+++ b/detalle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hermanos Jota</title>
+    <title>Detalles de producto</title>
 </head>
 <body>
     <header class="encabezado">
@@ -13,9 +13,10 @@
             <a href="#carrito#"></a>
         </nav>
     </header>
-        <h1>Nuestros productos</h1>
-            <div id="catalogo" class="productos">
-            </div>
+    <h1>Detalles del Producto</h1>
+    <div id="detalle"></div>
+
     <script src="productos.js"></script>
+    <script src="detalle.js"></script>
 </body>
 </html>
