--- a/productos.html
+++ b/productos.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hermanos Jota</title>
+    <title>Productos</title>
 </head>
 <body>
-    <header class="encabezado">
-        <nav>
-            <img src="" alt="logo hermanos jota">
-            <input type="text" placeholder="Buscar muebles...">
-            <a href="#carrito#"></a>
-        </nav>
+    <header class="header">
+    <nav class="header__nav">
+        <ul class="nav__list">
+            <li><a href="index.html" class="nav__link">Inicio</a></li>
+            <li><a href="productos.html" class="nav__link">Catálogo</a></li>
+            <li><a href="contacto.html" class="nav__link">Contacto</a></li>
+        </ul>
+    </nav>
     </header>
-        <h1>Nuestros productos</h1>
-            <div id="catalogo" class="productos">
-            </div>
-    <script src="productos.js"></script>
+    <main id="catalogo" class="grid">
+        
+    </main>
+    <footer></footer>
+    <script type=module src="./js/main.js"></script> 
 </body>
 </html>
