--- a/productos.html
+++ b/productos.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Catalogo</title>
+    <link rel="stylesheet" href="catalogo.css">
 </head>
 <body>
     <header class="header">
-    <nav class="header__nav">
-        <ul class="nav__list">
-            <li><a href="index.html" class="nav__link">Inicio</a></li>
-            <li><a href="productos.html" class="nav__link">Catálogo</a></li>
-            <li><a href="contacto.html" class="nav__link">Contacto</a></li>
-        </ul>
-    </nav>
+        <div class="header__logo">
+            <img src="assets/logo.svg" alt="Logo Hermanos Jota" />
+        </div>
+        <nav class="header__nav">
+            <ul class="nav__list">
+                <li><a href="index.html" class="nav__link">Inicio</a></li>
+                <li><a href="productos.html" class="nav__link">Catálogo</a></li>
+                <li><a href="contacto.html" class="nav__link">Contacto</a></li>
+            </ul>
+        </nav>
+        <div class="header__cart">
+            <button class="cart__btn">🛒 <span id="cart-count">0</span></button>
+        </div>
+        <button class="header__toggle" aria-label="Abrir menú">☰</button>
     </header>
     <main id="catalogo" class="grid">
-        
     </main>
     <footer></footer>
     <script type=module src="./js/main.js"></script> 
