--- a/contacto.html
+++ b/contacto.html
@@ -1,9 +1,3 @@
-<!-- Nuestros clientes suelen tener preguntas.
-Necesitamos un formulario simple para que nos dejen sus dudas. Debe validar que la información sea correcta."
-Un formulario con campos para "Nombre", "Email" y "Mensaje".
-Debe tener validación del lado del cliente con JavaScript.
-Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación del DOM -->
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -15,7 +9,6 @@ Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación 
 </head>
 
 <body>
-    <!-- Header -->
     <header>
       <nav class="navbar">
         <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
@@ -23,7 +16,7 @@ Al enviar, debe mostrar un mensaje de éxito en la página usando manipulación 
           <li><a href="index.html">Inicio</a></li>
           <li><a href="productos.html">Catálogo</a></li>
           <li><a href="contacto.html" class="active">Contacto</a></li>
-          <li><a href="producto.html">🛒<i class="fa-solid fa-cart-shopping"></i><span id="texto-carrito">Carrito</span></a></li>
+          <li><a href="carrito.html">🛒<i class="fa-solid fa-cart-shopping"></i><span id="texto-carrito">Carrito</span></a></li>
         </ul>
       </nav>
     </header>
