--- a/detalle.html
+++ b/detalle.html
@@ -4,19 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles de producto</title>
+    <link rel="stylesheet" href="detalle.css" />
 </head>
 <body>
-    <header class="encabezado">
-        <nav>
-            <img src="" alt="logo hermanos jota">
-            <input type="text" placeholder="Buscar muebles...">
-            <a href="#carrito#"></a>
-        </nav>
+    <header>
+      <nav class="navbar">
+        <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
+        <ul>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="productos.html">Catálogo</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="carrito.html">🛒<i class="fa-solid fa-cart-shopping"></i><span id="texto-carrito">Carrito</span></a></li>
+        </ul>
+      </nav>
     </header>
+        <nav class="search-bar">
+            <input type="text" placeholder="Buscar muebles...">
+            <a href="#carrito#">🔎</a>
+        </nav>
     <h1>Detalles del Producto</h1>
     <div id="detalle"></div>
 
     <script src="productos.js"></script>
     <script src="detalle.js"></script>
+
+    <footer class="footer">
+      <div class="footer__info">
+        <p>&copy; 2025 Hermanos Jota - Todos los derechos reservados</p>
+        <p>
+          Contacto:
+          <a href="mailto:brand@hermanosjota.com">brand@hermanosjota.com</a>
+        </p>
+      </div>
+      <div class="footer__social">
+        <a href="#">Instagram</a> | <a href="#">Facebook</a>
+      </div>
+    </footer>
 </body>
 </html>
