arreglo de errores

--- a/detalle.html
+++ b/detalle.html
@@ -11,8 +11,8 @@
       <nav class="navbar">
         <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
         <ul>
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="productos.html">Catálogo</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="productos.html" class="active">Catálogo</a></li>
           <li><a href="contacto.html">Contacto</a></li>
           <li><a href="carrito.html">🛒<i class="fa-solid fa-cart-shopping"></i><span id="texto-carrito">Carrito</span></a></li>
         </ul>
