--- a/productos.html
+++ b/productos.html
@@ -18,6 +18,12 @@
         </ul>
       </nav>
     </header>
+    
+    <nav class="search-bar">
+      <input type="text" placeholder="Buscar muebles...">
+      <a href="#carrito#">🔎</a>
+    </nav>
+
     <main id="catalogo" class="grid">
     </main>
     <footer class="footer">
