Organización de archivos en carpetas, corrección de errores

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="estiloContacto.css">
+    <link rel="stylesheet" href="../css/contacto.css">
 </head>
 
 <body>
@@ -55,7 +55,6 @@
                 </div>
             </div>
     </main>
-    <script src="validacionContacto.js"></script>
     
     <!-- Footer -->
     <footer class="footer">
@@ -71,7 +70,7 @@
       </div>
     </footer>
 
-    <script src="productos.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="../js/main.js"></script>
+
 </body>
 </html>
