--- a/html/detalle.html
+++ b/html/detalle.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo</title>
-    <link rel="stylesheet" href="productos.css">
+    <title>Detalles de producto</title>
+    <link rel="stylesheet" href="../css/detalle.css" />
 </head>
 <body>
     <header>
       <nav class="navbar">
-        <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
+        <img src="../assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="productos.html" class="active">Catálogo</a></li>
@@ -24,8 +24,9 @@
       <a href="#carrito#">🔎</a>
     </nav>
 
-    <main id="catalogo" class="grid">
-    </main>
+    <h1>Detalles del Producto</h1>
+    <div id="detalle"></div>
+
     <footer class="footer">
       <div class="footer__info">
         <p>&copy; 2025 Hermanos Jota - Todos los derechos reservados</p>
@@ -38,6 +39,8 @@
         <a href="#">Instagram</a> | <a href="#">Facebook</a>
       </div>
     </footer>
-    <script type=module src="./js/main.js"></script> 
+
+    <script type="module" src="../js/main.js"></script>
+
 </body>
 </html>
