--- a/html/index.html
+++ b/html/index.html
@@ -12,14 +12,14 @@
     />
 
     <!-- 📄 Estilos principales -->
-    <link rel="stylesheet" href="estiloInicio.css" />
+    <link rel="stylesheet" href="../css/index.css" />
   </head>
 
   <body>
     <!-- Header -->
     <header>
       <nav class="navbar">
-        <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
+        <img src="../assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="productos.html">Catálogo</a></li>
@@ -50,7 +50,7 @@
           <!-- Producto 1 -->
           <article class="product-card">
             <img
-              src="assets/Aparador Uspallata.png"
+              src="../assets/Aparador Uspallata.png"
               alt="Aparador Uspallata"
               class="product-card__img"
             />
@@ -62,7 +62,7 @@
           <!-- Producto 2 -->
           <article class="product-card">
             <img
-              src="assets/Mesa de Centro Araucaria.png"
+              src="../assets/Mesa de Centro Araucaria.png"
               alt="Mesa de Centro Araucaria"
               class="product-card__img"
             />
@@ -74,7 +74,7 @@
           <!-- Producto 3 -->
           <article class="product-card">
             <img
-              src="assets/Silla de Trabajo Belgrano.png"
+              src="../assets/Silla de Trabajo Belgrano.png"
               alt="Silla de Trabajo Belgrano"
               class="product-card__img"
             />
