Migración de imágenes locales a urls

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header>
       <nav class="navbar">
-        <img src="../assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
+        <img src="https://piaachigaritba.github.io/img_muebleria/img/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a href="productos.html">Catálogo</a></li>
@@ -50,7 +50,7 @@
           <!-- Producto 1 -->
           <article class="product-card">
             <img
-              src="../assets/Aparador Uspallata.png"
+              src="https://piaachigaritba.github.io/img_muebleria/img/Aparador%20Uspallata.png"
               alt="Aparador Uspallata"
               class="product-card__img"
             />
@@ -62,7 +62,7 @@
           <!-- Producto 2 -->
           <article class="product-card">
             <img
-              src="../assets/Mesa de Centro Araucaria.png"
+              src="https://piaachigaritba.github.io/img_muebleria/img/Mesa%20de%20Centro%20Araucaria.png"
               alt="Mesa de Centro Araucaria"
               class="product-card__img"
             />
@@ -74,7 +74,7 @@
           <!-- Producto 3 -->
           <article class="product-card">
             <img
-              src="../assets/Silla de Trabajo Belgrano.png"
+              src="https://piaachigaritba.github.io/img_muebleria/img/Silla%20de%20Trabajo%20Belgrano.png"
               alt="Silla de Trabajo Belgrano"
               class="product-card__img"
             />
