--- a/html/contacto.html
+++ b/html/contacto.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <nav class="navbar">
-        <img src="assets/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
+        <img src="https://piaachigaritba.github.io/img_muebleria/img/logo.svg" alt="Logo Hermanos Jota" class="logo"/>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="productos.html">Catálogo</a></li>
